feat: Refactor autenticación JWT y mejorar gestión de roles en la configuración de seguridad